--- a/Graduation/Views/Admin/AdminAcademy.cshtml
+++ b/Graduation/Views/Admin/AdminAcademy.cshtml
@@ -1,217 +1,69 @@
 ﻿@model Graduation.Models.AcademyViewModel
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>学院名称管理</title>
-    <meta name="description" content="">
-    <meta name="author" content="templatemo">
+@{
+    Layout = "~/Views/Shared/Guide.cshtml";
+}
+@if (ViewBag.type == "1")
+{
+    ViewBag.type = "display:none";
+}
 
-</head>
-<body>
-    <!-- Left column -->
-    <div class="templatemo-flex-row">
-        <div class="templatemo-sidebar">
-            <header class="templatemo-site-header">
-                <h1>华北电力大学</h1>
-            </header>
-            <div class="profile-photo-container">
-                <img src="../../images/profile-photo.jpg" alt="Profile Photo" class="img-responsive">
-                <div class="profile-photo-overlay"></div>
-            </div>
-            <div class="mobile-menu-icon">
-                <i class="fa fa-bars"></i>
-            </div>
-            <nav class="templatemo-left-nav">
-                <ul class="ly-ul-parent">
-                    <li>
-                        <a href="#" class="active">
-                            <i class="fa fa-home fa-fw"></i>
-                            系统设置
-                            <i class="fa fa-angle-down fa-fw right"></i>
-                        </a>
-                        <ul class="ly-ul" style="display:none">
-                            <li>
-                                <a href="#">
-                                    院系及专业名称管理
-                                    <i class="fa fa-angle-right fa-fw right"></i>
-                                </a>
-                                <ul class="ly-ul-child" style="display:none">
-                                    <li><a href="index.html">学院名称管理</a></li>
-                                    <li><a href="departmentName.html">系名称管理</a></li>
-                                    <li><a href="professionalName.html">专业名称管理</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="loginTimeControl.html">登录时间控制</a></li>
-                            <li><a href="schoolChange.html">学籍变动管理</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="user.html">
-                            <i class="fa fa-bar-chart fa-fw"></i>
-                            系统用户管理
-                        </a>
-                    </li>
-                    <li>
-                        <a href="resertPassword.html">
-                            <i class="fa fa-database fa-fw"></i>
-                            重置密码
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-map-marker fa-fw"></i>
-                            通知管理
-                            <i class="fa fa-angle-down fa-fw right"></i>
-                        </a>
-                        <ul class="ly-ul" style="display:none">
-                            <li><a href="new.html">发布通知</a></li>
-                            <li><a href="newdetail.html">通告公告</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-users fa-fw"></i>
-                            生源库导入导出
-                            <i class="fa fa-angle-down fa-fw right"></i>
-                        </a>
-                        <ul class="ly-ul" style="display:none">
-                            <li><a href="graduateMess.html">毕业生信息导入</a></li>
-                            <li><a href="graduateOut.html">毕业生信息导出</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-sliders fa-fw"></i>
-                            毕业生
-                            <i class="fa fa-angle-down fa-fw right"></i>
-                        </a>
-                        <ul class="ly-ul" style="display:none">
-                            <li><a href="graduateWork.html">签约登记表</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-eject fa-fw"></i>
-                            统计管理
-                            <i class="fa fa-angle-down fa-fw right"></i>
-                        </a>
-                        <ul class="ly-ul" style="display:none">
-                            <li><a href="employ.html">就业统计</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-user-md fa-fw"></i>
-                            本专科生/研究生
-                            <i class="fa fa-angle-down fa-fw right"></i>
-                        </a>
-                        <ul class="ly-ul" style="display:none">
-                            <li>
-                                <a href="#">
-                                    基本信息管理
-                                    <i class="fa fa-angle-right fa-fw right"></i>
-                                </a>
-                                <ul class="ly-ul-child" style="display:none">
-                                    <li><a href="undergraduateList.html">毕业生列表</a></li>
-                                    <li><a href="addUndergraduate.html">院系预增加的生源</a></li>
-                                    <li><a href="deleteUndergradute.html">院系预删除的生源</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    求职信息管理
-                                    <i class="fa fa-angle-right fa-fw right"></i>
-                                </a>
-                                <ul class="ly-ul-child" style="display:none">
-                                    <li><a href="jobSearchInformationManagement3.html">审核管理</a></li>
-                                    <li><a href="jobSearchInformationManagement.html">显示设置</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    就业信息管理
-                                    <i class="fa fa-angle-right fa-fw right"></i>
-                                </a>
-                                <ul class="ly-ul-child" style="display:none">
-                                    <li><a href="employmentInformationAudit.html">就业信息审核</a></li>
-                                    <li><a href="exportEmploymentInformation.html">就业信息导出</a></li>
-                                    <li><a href="count.html">就业统计</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="login.html">
-                            安全退出
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <!-- Main content -->
-        <div class="templatemo-content col-1 light-gray-bg">
-            <div class="templatemo-top-nav-container">
-                <h2>求职与就业信息管理系统</h2>
-                <div class="right">
-                    <span>欢迎&nbsp;&nbsp;</span><span class="admin">就业中心管理员：</span><span class="admin">Admin</span><span>&nbsp;&nbsp;登录本系统</span>
-                </div>
-            </div>
-            <div class="templatemo-content-container now-position">
-                <span>当前位置：</span><span>系统设置>></span><span>院系及专业名称管理>></span><span>学院名称管理</span>
-                <h1 class="ly-title">学院名称管理</h1>
-                @using (@Html.BeginForm(null, null, null, FormMethod.Post, new { @class = "form-inline ly-form" }))
-                {
-                        @Html.HiddenFor(model=>model.Academy.Id)
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true)
-                    <div class="form-group">
-                        <label for="exampleInputAmount">学院名称：</label>
-                        <div class="input-group">
-                            @Html.TextBoxFor(model => model.Academy.Name, new { @class = "form-control indexInput", placeholder = "学院名称", required = "required" })
-                            
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">添加或更新</button>
-                }
-                <div class="panel panel-default table-responsive">
-                    <table class="table table-striped table-bordered templatemo-user-table table-hover .houtai-table select">
-                        <thead>
-                            <tr>
-                                <th>学院ID</th>
-                                <th>学院名称</th>
-                                <th>选择</th>
-                                <th>删除</th>
-                            </tr>
-                        </thead>
-                        @foreach (var temp in Model.AcademyList)
-                        {
-                            <tr>
-                                <td class="index">@temp.Id</td>
-                                <td>@temp.Name</td>
-                                <td>@Html.ActionLink("选择", "AdminAcademy", new { Id = temp.Id })</td>
-                                <td>@Html.ActionLink("删除", "AdminAcademy", new { Id = temp.Id, type = 1 })</td>                              
-                            </tr>
-                        }
-                    </table>
-                </div>
-                <div class="right page">
-                    <a href="#">首页</a>
-                    <a href="#">&lt;&lt;</a>
-                    <a href="#" class="active">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-                    <a href="#">...</a>
-                    <a href="#">&gt;&gt;</a>
-                    <a href="#">尾页</a>
-                </div>
-                <footer class="text-right"></footer>
-            </div>
+<div class="templatemo-content col-1 light-gray-bg">
+    <div class="templatemo-top-nav-container">
+        <h2>求职与就业信息管理系统</h2>
+        <div class="right">
+            <span>欢迎&nbsp;&nbsp;</span><span class="admin">就业中心管理员：</span><span class="admin">Admin</span><span>&nbsp;&nbsp;登录本系统</span>
         </div>
     </div>
-</body>
-</html>
+    <div class="templatemo-content-container now-position">
+        <span>当前位置：</span><span>系统设置>></span><span>院系及专业名称管理>></span><span>学院名称管理</span>
+        <h1 class="ly-title">学院名称管理</h1>
+        @using (@Html.BeginForm(null, null, null, FormMethod.Post, new { @class = "form-inline ly-form" }))
+        {
+            @Html.HiddenFor(model => model.Academy.Id)
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true)
+            <div class="form-group">
+                <label for="exampleInputAmount">学院名称：</label>
+                <div class="input-group">
+                    @Html.TextBoxFor(model => model.Academy.Name, new { @class = "form-control indexInput", placeholder = "学院名称", required = "required" })
+
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">添加或更新</button>
+        }
+        <div class="panel panel-default table-responsive">
+            <table class="table table-striped table-bordered templatemo-user-table table-hover .houtai-table select">
+                <thead>
+                    <tr>
+                        <th>学院ID</th>
+                        <th>学院名称</th>
+                        <th>选择</th>
+                        <th>删除</th>
+                    </tr>
+                </thead>
+                @foreach (var temp in Model.AcademyList)
+                {
+                    <tr>
+                        <td class="index">@temp.Id</td>
+                        <td>@temp.Name</td>
+                        <td>@Html.ActionLink("选择", "AdminAcademy", new { Id = temp.Id })</td>
+                        <td>@Html.ActionLink("删除", "AdminAcademy", new { Id = temp.Id, type = 1 })</td>
+                    </tr>
+                }
+            </table>
+        </div>
+        <div class="right page">
+            <a href="#">首页</a>
+            <a href="#">&lt;&lt;</a>
+            <a href="#" class="active">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">...</a>
+            <a href="#">&gt;&gt;</a>
+            <a href="#">尾页</a>
+        </div>
+        <footer class="text-right"></footer>
+    </div>
+</div>
