--- a/Graduation/Views/Admin/EmplExpot.cshtml
+++ b/Graduation/Views/Admin/EmplExpot.cshtml
@@ -4,6 +4,14 @@
 
 @using Webdiyer.WebControls.Mvc;
 
+@{
+    Layout = "~/Views/Shared/Guide.cshtml";
+}
+@if (ViewBag.type == "1")
+{
+    ViewBag.type = "display:none";
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,12 +95,6 @@
             });
         }
     </script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 <body>
