--- a/Graduation/Views/Admin/ApplExam.cshtml
+++ b/Graduation/Views/Admin/ApplExam.cshtml
@@ -3,6 +3,10 @@
 {
     ViewBag.type = "disabled";
 }
+@if (ViewBag.style == "1")
+{
+    ViewBag.style = "display:none";
+}
 @using Webdiyer.WebControls.Mvc
 <!DOCTYPE html>
 <html lang="en">
@@ -266,9 +270,19 @@
                     </div>
                     <div class="form-group">
                         <label class="col-sm-1 control-label">所在院系</label>
-                        @Html.DropDownListFor(model => model.upload.Academy, ViewBag.aca as SelectList, "=请选择=", new { id = "Aca", @class = "form-control ly-select", disabled = @ViewBag.type })
-                        @Html.DropDownListFor(model => model.upload.Department, ViewBag.dep as SelectList, "=请选择=", new { id = "Depart", @class = "form-control ly-select", disabled = @ViewBag.type })
-                        @Html.DropDownListFor(model => model.upload.Major, ViewBag.major as List<SelectListItem>, "=请选择=", new { id = "Major", @class = "form-control ly-select" })
+                        @if (@ViewBag.style == "2")
+                        {
+                            @Html.DropDownListFor(model => model.upload.Academy, ViewBag.aca as List<SelectListItem>, "=请选择=", new { id = "Aca", @class = "form-control ly-select" })
+                            @Html.DropDownListFor(model => model.upload.Department, ViewBag.dep as List<SelectListItem>, "=请选择=", new { id = "Depart", @class = "form-control ly-select" })
+                            @Html.DropDownListFor(model => model.upload.Major, ViewBag.major as List<SelectListItem>, "=请选择=", new { id = "Major", @class = "form-control ly-select" })
+                        }
+                        else
+                        {
+                            @Html.DropDownListFor(model => model.upload.Academy, ViewBag.aca as SelectList, "=请选择=", new { id = "Aca", @class = "form-control ly-select", disabled = @ViewBag.type })
+                            @Html.DropDownListFor(model => model.upload.Department, ViewBag.dep as SelectList, "=请选择=", new { id = "Depart", @class = "form-control ly-select", disabled = @ViewBag.type })
+                            @Html.DropDownListFor(model => model.upload.Major, ViewBag.major as List<SelectListItem>, "=请选择=", new { id = "Major", @class = "form-control ly-select" })
+                        }
+                        
                     </div>
                     <div class="form-group">
                         <label for="inputPassword3" class="col-sm-2 control-label">
