--- a/Graduation/Views/FillBaseInfo/FillBaseInfo.cshtml
+++ b/Graduation/Views/FillBaseInfo/FillBaseInfo.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Graduation.Models.FillBaseInfoViewModel
 
+@if (ViewBag.locked == "1")
+{
+    ViewBag.locked = "disabled";
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -282,7 +287,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="4"><input class="btn btn-info" type="submit" value="提交" /></td>
+                                <td colspan="4"><input class="btn btn-info" type="submit" value="提交" @ViewBag.locked  /></td>
                             </tr>
                         </table>
                     }
@@ -291,8 +296,8 @@
                         <tr>
                             <td colspan="4">
                                 <span>是否通过审核：</span>
-                                @Html.RadioButtonFor(model => model.baseInfo.IsBaseChecked, "1") 是
-                                @Html.RadioButtonFor(model => model.baseInfo.IsBaseChecked, "0", new { @checked = true }) 否
+                                @Html.RadioButtonFor(model => model.baseInfo.IsBaseChecked, "1", new { @checked=true, disabled=true}) 是
+                                @Html.RadioButtonFor(model => model.baseInfo.IsBaseChecked, "0", new { @checked = true ,disabled=true}) 否
                             </td>
                         </tr>
                     </table>
